--- a/Iris.html
+++ b/Iris.html
@@ -7,7 +7,7 @@
     
     <link rel="stylesheet" href="iris.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap">
-    <title>ChatBot | Iris</title>
+    <title>Iris</title>
   
 </head>
 <body>
@@ -31,7 +31,9 @@
             </div>
           </div>
           <div class="msg right-msg">
-            
+
+
+
             <div
              class="msg-img"
              style="background-image: url(user.png)"
