\\ Modified directory structure

--- a/homepage.html
+++ b/homepage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StarNex</title>
     <link rel="icon" href="./Whitelogo.png">
-    <link rel="stylesheet" type="text/css" href="homepage.css">
+    <link rel="stylesheet" type="text/css" href="static/css/homepage.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
@@ -21,13 +21,13 @@
     
             <div class="navbar-nav ms-auto d-flex align-items-center" id="navbarSupportedContent">
                 <a class="nav-link" href="#">
-                    <img src="./notification.png" id="notifications" alt="Notifications" width="auto" height="30">
+                    <img src="static/image/notification.png" id="notifications" alt="Notifications" width="auto" height="30">
                 </a>
                 <a class="nav-link" href="#">
-                    <img src="./friend.png" id="friends" alt="Friends" width="auto" height="28">
+                    <img src="static/image/friend.png" id="friends" alt="Friends" width="auto" height="28">
                 </a>
                 <a class="nav-link" href="#">
-                    <img src="./Premium.png" id="Premium" alt="Premium" width="auto" height="35">
+                    <img src="static/image/Premium.png" id="Premium" alt="Premium" width="auto" height="35">
                 </a>
                 <a class="nav-link" href="./SignIn.html" target="_blank">
                     <img src="./SignIn.png" id="SignIn" alt="Sign In" width="auto" height="35">
@@ -40,18 +40,18 @@
 <!-- PARALLAX -->
 
 <section>
-    <img src="./background.png" style="height: 130%; width: 100%;" id="background" class="parallax">
-    <img src="./stars.png" style="opacity: 70%;" id="stars">
-    <img src="./3Front.png" style="height: 100%; width: 100%;" id="mountains_behind" class="parallax">
-    <img src="./2Front.png" style="height: 100%; width: 100%;" id="mountains_front" class="parallax">
+    <img src="static/image/background.png" style="height: 130%; width: 100%;" id="background" class="parallax">
+    <img src="static/image/stars.png" style="opacity: 70%;" id="stars">
+    <img src="static/image/3Front.png" style="height: 100%; width: 100%;" id="mountains_behind" class="parallax">
+    <img src="static/image/2Front.png" style="height: 100%; width: 100%;" id="mountains_front" class="parallax">
     <h6 id="text2" class="LevelUp"> LEVEL UP </h6>
     <h2 id="text1" class="TheStars"> THE STARS </h2>
-    <a href="./discover.html" id="btn" target="_blank" style="text-align: center;"> PLAY NOW </a>
-    <img src="./1Front.png" style="height: 100%; width: 100%;" id="mountains_front" class="parallax">
+    <a href="discover.html" id="btn" target="_blank" style="text-align: center;"> PLAY NOW </a>
+    <img src="static/image/1Front.png" style="height: 100%; width: 100%;" id="mountains_front" class="parallax">
     
 </section>
 
-<img src="./2astronaut.png" id="astronaut" class="parallax right-bottom-image">
+<img src="static/image/2astronaut.png" id="astronaut" class="parallax right-bottom-image">
 
 <script>
     let stars = document.getElementById('stars');
@@ -79,7 +79,7 @@
 <!--  AI CHAT BOT -->
 
     <div class="chatbot-icon">
-        <a href="./Iris.html" target="_blank"> <img src="./IRIS.png" alt="Chatbot"> </a> 
+        <a href="Iris.html" target="_blank"> <img src="static/image/IRIS.png" alt="Chatbot"> </a>
     </div>
 
 <!-- About US -->
@@ -112,9 +112,9 @@
                 <h3>Quick Links</h3>
                 <ul class="list">
                     <li><a href="./SignUp.html" target="_blank"></a>Register</li>
-                    <li><a href="./discover.html" target="_blank">Discover</a></li>
-                    <li><a href="./Iris.html" target="_blank">IrisAI</a></li>
-                    <li><a href="./feedback.html" target="_blank">Feedback</a></li>
+                    <li><a href="discover.html" target="_blank">Discover</a></li>
+                    <li><a href="Iris.html" target="_blank">IrisAI</a></li>
+                    <li><a href="feedback.html" target="_blank">Feedback</a></li>
                     <li><a href="./https://mail.google.com/mail/u/0/#inbox" target="_blank">Contact</a></li>
                 </ul>
             </div>
