--- a/discover.html
+++ b/discover.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Gaming Website</title>
-<link rel="stylesheet" href="discover.css">
+<link rel="stylesheet" href="static/css/discover.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <link rel="icon" href="./Whitelogo.png" type="image/x-icon"></head>
 <body>
@@ -834,7 +834,7 @@
 
 </section>
 
-<script src="index.js"></script>
+<script src="static/js/index.js"></script>
 
 </body>
 </html>
