--- a/feedback.html
+++ b/feedback.html
@@ -10,7 +10,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="feedback.css">
+        <link rel="stylesheet" href="static/css/feedback.css">
     
     </head>
     <body style="background-color: rgb(0, 0, 0);">
