--- a/Iris.html
+++ b/Iris.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="iris.css">
+    <link rel="stylesheet" href="./static/css/Iris.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap">
     <title>Iris</title>
   
