--- a/discover.html
+++ b/discover.html
@@ -6,7 +6,7 @@
 <title>Gaming Website</title>
 <link rel="stylesheet" href="static/css/discover.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-<link rel="icon" href="./Whitelogo.png" type="image/x-icon"></head>
+<link rel="icon" href="static/image/Whitelogo.png" type="image/x-icon"></head>
 <body>
 
 
