--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StarNex</title>
-    <link rel="icon" href="./Whitelogo.png">
+    <link rel="icon" href="static/image/Whitelogo.png">
     <link rel="stylesheet" type="text/css" href="static/css/homepage.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-expand-xs fixed-top">
         <div class="container-fluid ">
             <a class="navbar-brand" href="#">
-                <img src="./textLogo.png" alt="Logo" width="auto" height="24" class="d-inline-block align-text-top">
+                <img src="static/image/textLogo.png" alt="Logo" width="auto" height="24" class="d-inline-block align-text-top">
             </a>
     
             <div class="navbar-nav ms-auto d-flex align-items-center" id="navbarSupportedContent">
@@ -30,7 +30,7 @@
                     <img src="static/image/Premium.png" id="Premium" alt="Premium" width="auto" height="35">
                 </a>
                 <a class="nav-link" href="./SignIn.html" target="_blank">
-                    <img src="./SignIn.png" id="SignIn" alt="Sign In" width="auto" height="35">
+                    <img src="static/image/SignIn.png" id="SignIn" alt="Sign In" width="auto" height="35">
                 </a>
             </div>
         </div>
