\\ Files moved static -> public fodler

--- a/SignUp.html
+++ b/SignUp.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Sign Up Form</title>
   <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css'>
-  <link rel="stylesheet" href="static/css/SignIn.css">
-  <link rel="icon" href="static/image/Whitelogo.png">
+  <link rel="stylesheet" href="my-app/public/css/SignIn.css">
+  <link rel="icon" href="my-app/public/image/Whitelogo.png">
 
   <script type="text/javascript">
     function generateSpans()
