--- a/discover.html
+++ b/discover.html
@@ -4,9 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Gaming Website</title>
-<link rel="stylesheet" href="static/css/discover.css">
+<link rel="stylesheet" href="my-app/public/css/discover.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-<link rel="icon" href="static/image/Whitelogo.png" type="image/x-icon"></head>
+<link rel="icon" href="my-app/public/image/Whitelogo.png" type="image/x-icon"></head>
 <body>
 
 
@@ -834,7 +834,7 @@
 
 </section>
 
-<script src="static/js/index.js"></script>
+<script src="my-app/public/jsndex.js"></script>
 
 </body>
 </html>
