--- a/homepage.html
+++ b/homepage.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StarNex</title>
-    <link rel="icon" href="static/image/Whitelogo.png">
-    <link rel="stylesheet" type="text/css" href="static/css/homepage.css">
+    <link rel="icon" href="my-app/public/image/Whitelogo.png">
+    <link rel="stylesheet" type="text/css" href="my-app/public/css/homepage.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
@@ -16,21 +16,21 @@
     <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-expand-xs fixed-top">
         <div class="container-fluid ">
             <a class="navbar-brand" href="#">
-                <img src="static/image/textLogo.png" alt="Logo" width="auto" height="24" class="d-inline-block align-text-top">
+                <img src="my-app/public/image/textLogo.png" alt="Logo" width="auto" height="24" class="d-inline-block align-text-top">
             </a>
     
             <div class="navbar-nav ms-auto d-flex align-items-center" id="navbarSupportedContent">
                 <a class="nav-link" href="#">
-                    <img src="static/image/notification.png" id="notifications" alt="Notifications" width="auto" height="30">
+                    <img src="my-app/public/image/notification.png" id="notifications" alt="Notifications" width="auto" height="30">
                 </a>
                 <a class="nav-link" href="#">
-                    <img src="static/image/friend.png" id="friends" alt="Friends" width="auto" height="28">
+                    <img src="my-app/public/image/friend.png" id="friends" alt="Friends" width="auto" height="28">
                 </a>
                 <a class="nav-link" href="#">
-                    <img src="static/image/Premium.png" id="Premium" alt="Premium" width="auto" height="35">
+                    <img src="my-app/public/image/Premium.png" id="Premium" alt="Premium" width="auto" height="35">
                 </a>
                 <a class="nav-link" href="./SignIn.html" target="_blank">
-                    <img src="static/image/SignIn.png" id="SignIn" alt="Sign In" width="auto" height="35">
+                    <img src="my-app/public/image/SignIn.png" id="SignIn" alt="Sign In" width="auto" height="35">
                 </a>
             </div>
         </div>
@@ -40,18 +40,18 @@
 <!-- PARALLAX -->
 
 <section>
-    <img src="static/image/background.png" style="height: 130%; width: 100%;" id="background" class="parallax">
-    <img src="static/image/stars.png" style="opacity: 70%;" id="stars">
-    <img src="static/image/3Front.png" style="height: 100%; width: 100%;" id="mountains_behind" class="parallax">
-    <img src="static/image/2Front.png" style="height: 100%; width: 100%;" id="mountains_front" class="parallax">
+    <img src="my-app/public/image/background.png" style="height: 130%; width: 100%;" id="background" class="parallax">
+    <img src="my-app/public/image/stars.png" style="opacity: 70%;" id="stars">
+    <img src="my-app/public/image/3Front.png" style="height: 100%; width: 100%;" id="mountains_behind" class="parallax">
+    <img src="my-app/public/image/2Front.png" style="height: 100%; width: 100%;" id="mountains_front" class="parallax">
     <h6 id="text2" class="LevelUp"> LEVEL UP </h6>
     <h2 id="text1" class="TheStars"> THE STARS </h2>
     <a href="discover.html" id="btn" target="_blank" style="text-align: center;"> PLAY NOW </a>
-    <img src="static/image/1Front.png" style="height: 100%; width: 100%;" id="mountains_front" class="parallax">
+    <img src="my-app/public/image/1Front.png" style="height: 100%; width: 100%;" id="mountains_front" class="parallax">
     
 </section>
 
-<img src="static/image/2astronaut.png" id="astronaut" class="parallax right-bottom-image">
+<img src="my-app/public/image/2astronaut.png" id="astronaut" class="parallax right-bottom-image">
 
 <script>
     let stars = document.getElementById('stars');
@@ -79,7 +79,7 @@
 <!--  AI CHAT BOT -->
 
     <div class="chatbot-icon">
-        <a href="Iris.html" target="_blank"> <img src="static/image/IRIS.png" alt="Chatbot"> </a>
+        <a href="Iris.html" target="_blank"> <img src="my-app/public/image/IRIS.png" alt="Chatbot"> </a>
     </div>
 
 <!-- About US -->
