fixed errors homepage.html

--- a/homepage.html
+++ b/homepage.html
@@ -43,11 +43,11 @@
     <img src="static/image/background.png" style="height: 130%; width: 100%;" id="background" class="parallax">
     <img src="static/image/stars.png" style="opacity: 70%;" id="stars">
     <img src="static/image/3Front.png" style="height: 100%; width: 100%;" id="mountains_behind" class="parallax">
-    <img src="static/image/2Front.png" style="height: 100%; width: 100%;" id="mountains_front" class="parallax">
+    <img src="static/image/2Front.png" style="height: 100%; width: 100%;" id="mountains_front1" class="parallax">
     <h6 id="text2" class="LevelUp"> LEVEL UP </h6>
     <h2 id="text1" class="TheStars"> THE STARS </h2>
     <a href="discover.html" id="btn" target="_blank" style="text-align: center;"> PLAY NOW </a>
-    <img src="static/image/1Front.png" style="height: 100%; width: 100%;" id="mountains_front" class="parallax">
+    <img src="static/image/1Front.png" style="height: 100%; width: 100%;" id="mountains_front2" class="parallax">
     
 </section>
 
@@ -59,7 +59,8 @@
     let text1 = document.getElementById('text1');
     let text2 = document.getElementById('text2');
     let btn = document.getElementById('btn');
-    let mountains_front = document.getElementById('mountains_front');
+    let mountains_front1 = document.getElementById('mountains_front1');
+    let mountains_front2 = document.getElementById('mountains_front2');
     let astronaut = document.getElementById('astronaut');
 
     const initialTextOffsetTop = text1.offsetTop;
@@ -122,7 +123,7 @@
                 <h3>Follow Us</h3>
                 <ul class="social-icons">
 
-                    <li><a href="https://www.facebook.com/" target="_blank"><img src="https://webstockreview.net/images/white-facebook-icon-png-4.png" alt="Facebook" style="height: 20px; width: 20px;"></i></a></li>
+                    <li><a href="https://www.facebook.com/" target="_blank"><img src="https://webstockreview.net/images/white-facebook-icon-png-4.png" alt="Facebook" style="height: 20px; width: 20px;"></a></li>
 
                     <li><a href="https://twitter.com/login" target="_blank"><img src="https://www.pinclipart.com/picdir/big/578-5789236_twitter-clipart.png" alt="x" style="height: 17px; width: 20px;"></a></li>
 
@@ -134,7 +135,7 @@
             </div>
         </div>
         <div class="bottom-bar">
-            <p>&copy; 2023 Aucशन . All rights reserved</p>
+            <p>&copy; 2024 STARNEX . All rights reserved</p>
         </div>
     </footer>
     
