login signup form validation added

--- a/gameplayer.html
+++ b/gameplayer.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StarNex</title>
-    <link rel="icon" href="static/image/Whitelogo.png">
-    <link rel="stylesheet" type="text/css" href="static/css/homepage.css">
+    <link rel="icon" href="public/image/Whitelogo.png">
+    <link rel="stylesheet" type="text/css" href="public/css/homepage.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
@@ -16,25 +16,39 @@
 <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-expand-xs fixed-top">
     <div class="container-fluid ">
         <a class="navbar-brand" href="#">
-            <img src="static/image/textLogo.png" alt="Logo" width="auto" height="24" class="d-inline-block align-text-top">
+            <img src="public/image/textLogo.png" alt="Logo" width="auto" height="24" class="d-inline-block align-text-top">
         </a>
 
         <div class="navbar-nav ms-auto d-flex align-items-center" id="navbarSupportedContent">
             <a class="nav-link" href="#">
-                <img src="static/image/notification.png" id="notifications" alt="Notifications" width="auto" height="30">
+                <img src="public/image/notification.png" id="notifications" alt="Notifications" width="auto" height="30">
             </a>
             <a class="nav-link" href="#">
-                <img src="static/image/friend.png" id="friends" alt="Friends" width="auto" height="28">
+                <img src="public/image/friend.png" id="friends" alt="Friends" width="auto" height="28">
             </a>
             <a class="nav-link" href="#">
-                <img src="static/image/Premium.png" id="Premium" alt="Premium" width="auto" height="35">
+                <img src="public/image/Premium.png" id="Premium" alt="Premium" width="auto" height="35">
             </a>
             <a class="nav-link" href="./SignIn.html" target="_blank">
-                <img src="static/image/SignIn.png" id="SignIn" alt="Sign In" width="auto" height="35">
+                <img src="public/image/SignIn.png" id="SignIn" alt="Sign In" width="auto" height="35">
             </a>
         </div>
     </div>
 </nav>
+
+<div class="container my-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="ratio ratio-16x9">
+                <iframe
+                        src="https://your-gamemaker-game-link.com"
+                        title="GameMaker.io Game"
+                        allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
