--- a/SignIn.html
+++ b/SignIn.html
@@ -1,77 +1,165 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign In</title>
   <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css'>
-  <link rel="stylesheet" href="my-app/public/css/SignIn.css">
-  <link rel="icon" href="my-app/public/image/Whitelogo.png">
-
-
-  <script type="text/javascript">
-    function generateSpans()
-    {
-        for(let i=0; i<=271;i++) { document.getElementById("spanGenerate").appendChild(document.createElement("span")) }
-    }
-    function toggleVisible(caller){
-        if (caller.parentNode.children[0].type=="text")
-        {
-            caller.className = "bx bx-hide show-hide";
-            caller.parentNode.children[0].type="password";
-        }
-        else
-        {
-            caller.className = "bx bx-show show-hide";
-            caller.parentNode.children[0].type="text";
-        }
+  <link rel="stylesheet" href="./public/css/SignIn.css">
+  <link rel="icon" href="public/image/Whitelogo.png">
+  <style>
+    /* Styling for input fields and error messages */
+    .input-field {
+      margin-bottom: 20px; /* Reduced margin for cleaner layout */
+      position: relative; /* Ensure error message positioning is easier */
     }
 
-  </script>
+    /* Styling for the error messages */
+    .error {
+      color: red;
+      font-size: 8px; /* Smaller text for error messages */
+      margin-top: 6px; /* Slight margin to separate it from the input field */
+      display: none; /* Hidden by default */
+      position: absolute; /* Absolute positioning to avoid pushing down other elements */
+      bottom: -18px; /* Positioned just below the input field */
+      left: 0;
+    }
+
+    /* Add some padding to the inputs for better alignment */
+    input[type="email"],
+    input[type="password"] {
+      width: 100%;
+      padding: 8px;
+      box-sizing: border-box; /* Ensure padding doesn't affect width */
+    }
+  </style>
 </head>
 
-
 <body onload="generateSpans()">
-  <section id="spanGenerate">
-
-
-</section>
+<section id="spanGenerate"></section>
 
 <div class="container">
-    <header>SignIn Form</header>
-    <form action="./homepage.html" autocomplete="off">
-      <div class="field email-field">
-        <div class="input-field">
-          <input type="email" placeholder="Enter your email" class="email" required />
-        </div>
-        <span class="error email-error">
-          <i class="bx bx-error-circle error-icon"></i>
-          <p class="error-text">Please enter a valid email</p>
-        </span>
+  <header>Sign In Form</header>
+  <form id="loginForm" novalidate>
+    <div class="field email-field">
+      <div class="input-field">
+        <input type="email" placeholder="Enter your email" id="email" />
+        <span class="error" id="emailError">Please enter a valid email</span>
       </div>
-      <div class="field create-password">
-        <div class="input-field">
-          <input type="password" placeholder="Password" class="password" required />
-          <i class="bx bx-hide show-hide" onclick="toggleVisible(this)"></i>
-        </div>
-        
-        </span>
-      </div>
-      <div class="field confirm-password">
-        <div class="input-field">
-          <input type="password" placeholder="Confirm Password" class="cPassword" required />
-          <i class="bx bx-hide show-hide" onclick="toggleVisible(this)"></i>
-        </div>
-      
-      </div>
-      <div class="links">
-        <a href="https://gmail.com/">Forgot Password</a>
-        <a href="./SignUp.html" target="_blank">Signup</a>
-      </div>
-      <div class="input-field button">
-        <input type="submit" value="Login Now" />
-      </div>
-    </form>
-  </div>
+    </div>
 
+    <div class="field create-password">
+      <div class="input-field">
+        <input type="password" placeholder="Password" id="password" />
+        <i class="bx bx-hide show-hide" onclick="toggleVisible(this)"></i>
+        <span class="error" id="passwordError">Password must be at least 8 characters</span>
+      </div>
+    </div>
+
+    <div class="field confirm-password">
+      <div class="input-field">
+        <input type="password" placeholder="Confirm Password" id="confirmPassword" />
+        <i class="bx bx-hide show-hide" onclick="toggleVisible(this)"></i>
+        <span class="error" id="confirmPasswordError">Passwords do not match</span>
+      </div>
+    </div>
+
+    <div class="links">
+      <a href="https://gmail.com/">Forgot Password</a>
+      <a href="SignUp.html" target="_blank">Signup</a>
+    </div>
+
+    <div class="input-field button">
+      <input type="submit" value="Login Now" />
+    </div>
+  </form>
+</div>
+
+<script>
+  // Function to toggle password visibility
+  function toggleVisible(icon) {
+    const inputField = icon.previousElementSibling;
+    if (inputField.type === "password") {
+      inputField.type = "text";
+      icon.classList.remove("bx-hide");
+      icon.classList.add("bx-show");
+    } else {
+      inputField.type = "password";
+      icon.classList.remove("bx-show");
+      icon.classList.add("bx-hide");
+    }
+  }
+
+  // Show error message and add red border
+  function showError(input, errorElement, message) {
+    errorElement.textContent = message;
+    errorElement.style.display = 'block';
+    input.classList.add('error-border');
+  }
+
+  // Clear error message and remove red border
+  function clearError(input, errorElement) {
+    errorElement.style.display = 'none';
+    input.classList.remove('error-border');
+  }
+
+  // Form validation logic
+  function validateLoginForm(event) {
+    event.preventDefault(); // Prevent form submission
+
+    let isValid = true;
+
+    // Get all input elements
+    const emailInput = document.getElementById('email');
+    const passwordInput = document.getElementById('password');
+    const confirmPasswordInput = document.getElementById('confirmPassword');
+
+    // Get all error elements
+    const emailError = document.getElementById('emailError');
+    const passwordError = document.getElementById('passwordError');
+    const confirmPasswordError = document.getElementById('confirmPasswordError');
+
+    // Email validation
+    const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+    if (!emailRegex.test(emailInput.value.trim())) {
+      showError(emailInput, emailError, 'Enter a valid email address');
+      isValid = false;
+    } else {
+      clearError(emailInput, emailError);
+    }
+
+    // Password validation (minimum 8 characters)
+    if (passwordInput.value.trim().length < 8) {
+      showError(passwordInput, passwordError, 'Password must be at least 8 characters');
+      isValid = false;
+    } else {
+      clearError(passwordInput, passwordError);
+    }
+
+    // Confirm password validation (must match password)
+    if (passwordInput.value !== confirmPasswordInput.value) {
+      showError(confirmPasswordInput, confirmPasswordError, 'Passwords do not match');
+      isValid = false;
+    } else {
+      clearError(confirmPasswordInput, confirmPasswordError);
+    }
+
+    // Submit form if valid
+    if (isValid) {
+      alert('Login successful!');
+      // Here, you can allow form submission or redirect to another page.
+    }
+  }
+
+  // Attach form validation event listener after the DOM has loaded
+  document.getElementById('loginForm').addEventListener('submit', validateLoginForm);
+
+  // Background spans generation (your original function)
+  function generateSpans() {
+    for (let i = 0; i <= 271; i++) {
+      document.getElementById("spanGenerate").appendChild(document.createElement("span"));
+    }
+  }
+</script>
 </body>
 </html>
