--- a/SignUp.html
+++ b/SignUp.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign Up Form</title>
   <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css'>
-  <link rel="stylesheet" href="src/css/SignIn.css">
-  <link rel="icon" href="src/image/Whitelogo.png">
+  <link rel="stylesheet" href="public/css/SignIn.css">
+  <link rel="icon" href="public/image/Whitelogo.png">
 
 </head>
 <body onload="generateSpans()">
@@ -61,7 +61,7 @@
   </form>
 </div>
 
-<script src="src/js/login.js"></script>
+<script src="public/js/login.js"></script>
 
 </body>
 </html>
