\\ Homepage complete (with exceptions)

--- a/SignUp.html
+++ b/SignUp.html
@@ -6,7 +6,7 @@
   <title>Sign Up Form</title>
   <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css'>
   <link rel="stylesheet" href="public/css/SignIn.css">
-  <link rel="icon" href="public/image/Whitelogo.png">
+  <link rel="icon" href="public/image/favicon.ico">
 
 </head>
 <body onload="generateSpans()">
