--- a/SignIn.html
+++ b/SignIn.html
@@ -6,7 +6,7 @@
   <title>Sign In</title>
   <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css'>
   <link rel="stylesheet" href="public/css/SignIn.css">
-  <link rel="icon" href="public/image/Whitelogo.png">
+  <link rel="icon" href="public/image/favicon.ico">
   <style>
     /* Styling for input fields and error messages */
     .input-field {
