--- a/gameplayer.html
+++ b/gameplayer.html
@@ -41,7 +41,7 @@
         <div class="col-md-8">
             <div class="ratio ratio-16x9">
                 <iframe
-                        src="./src/games/spacerocks/html5game"
+                        src="public/games/spacerocks/html5game"
                         title="GameMaker.io Game"
                         allowfullscreen>
                 </iframe>
