--- a/SignIn.html
+++ b/SignIn.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign In</title>
   <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css'>
-  <link rel="stylesheet" href="public/css/SignIn.css">
+  <link rel="stylesheet" href="public/css/auth.css">
   <link rel="icon" href="public/image/favicon.ico">
   <style>
     /* Styling for input fields and error messages */
