--- a/homepage.html
+++ b/homepage.html
@@ -1,57 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="./public/js/home.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dummy</title>
-    <link rel="icon" href="public/image/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="public/css/home.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>StarNex</title>
+    <link rel="icon" href="./public/image/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="./public/css/home.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
 </head>
 
 <body style="background-color: rgb(0, 0, 0);">
 
-    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-expand-xs fixed-top">
-        <div class="container-fluid ">
-            <a class="navbar-brand" href="#">
-                <img src="public/image/textLogo.png" alt="Logo" width="auto" height="24" class="d-inline-block align-text-top">
-            </a>
+<nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-expand-xs fixed-top">
+    <div class="container-fluid ">
+        <a class="navbar-brand" href="#">
+            <img src="./public/image/textLogo.png" alt="Logo" width="auto" height="24" class="d-inline-block align-text-top">
+        </a>
 
-            <div class="navbar-nav ms-auto d-flex align-items-center" id="navbarSupportedContent">
-                <a class="nav-link" href="#">
-                    <img src="public/image/notification.png" id="notifications" alt="Notifications" width="auto" height="30">
-                </a>
-                <a class="nav-link" href="#">
-                    <img src="public/image/friend.png" id="friends" alt="Friends" width="auto" height="28">
-                </a>
-                <a class="nav-link" href="#">
-                    <img src="public/image/Premium.png" id="Premium" alt="Premium" width="auto" height="35">
-                </a>
-                <a class="nav-link" href="./SignIn.html" target="_blank">
-                    <img src="public/image/SignIn.png" id="SignIn" alt="Sign In" width="auto" height="35">
-                </a>
-            </div>
+        <div class="navbar-nav ms-auto d-flex align-items-center" id="navbarSupportedContent">
+            <a class="nav-link" href="#">
+                <img src="./public/image/notification.png" id="notifications" alt="Notifications" width="auto" height="30">
+            </a>
+            <a class="nav-link" href="#">
+                <img src="./public/image/friend.png" id="friends" alt="Friends" width="auto" height="28">
+            </a>
+            <a class="nav-link" href="#">
+                <img src="./public/image/Premium.png" id="Premium" alt="Premium" width="auto" height="35">
+            </a>
+            <a class="nav-link" href="./SignIn.html" target="_blank">
+                <img src="./public/image/SignIn.png" id="SignIn" alt="Sign In" width="auto" height="35">
+            </a>
         </div>
-    </nav>
+    </div>
+</nav>
 
 
 <!-- PARALLAX -->
 
 <section>
-    <img src="public/image/background.png" style="height: 130%; width: 100%;" id="background" class="parallax">
-    <img src="public/image/stars.png" style="opacity: 70%;" id="stars">
-    <img src="public/image/3Front.png" style="height: 100%; width: 100%;" id="mountains_behind" class="parallax">
-    <img src="public/image/2Front.png" style="height: 100%; width: 100%;" id="mountains_front" class="parallax">
+    <img src="./public/image/background.png" style="height: 130%; width: 100%;" id="background" class="parallax">
+    <img src="./public/image/stars.png" style="opacity: 70%;" id="stars">
+    <img src="./public/image/3Front.png" style="height: 100%; width: 100%;" id="mountains_behind" class="parallax">
+    <img src="./public/image/2Front.png" style="height: 100%; width: 100%;" id="mountains_front1" class="parallax">
     <h6 id="text2" class="LevelUp"> LEVEL UP </h6>
     <h2 id="text1" class="TheStars"> THE STARS </h2>
-    <a href="discover.html" id="btn" target="_blank" style="text-align: center;"> PLAY NOW </a>
-    <img src="public/image/1Front.png" style="height: 100%; width: 100%;" id="mountains_front" class="parallax">
+    <a href="./discover.html" id="btn" target="_blank" style="text-align: center;"> PLAY NOW </a>
+    <img src="./public/image/1Front.png" style="height: 100%; width: 100%;" id="mountains_front2" class="parallax">
 
 </section>
 
-<img src="public/image/2astronaut.png" id="astronaut" class="parallax right-bottom-image">
+<img src="./public/image/2astronaut.png" id="astronaut" class="parallax right-bottom-image">
 
 <script>
     let stars = document.getElementById('stars');
@@ -75,13 +75,13 @@
         mountains_behind.style.top = value * 0.45 + 'px';
         btn.style.marginTop = value * 1.25 + 'px';
     })
-    </script>
+</script>
 
 <!--  AI CHAT BOT -->
 
-    <div class="chatbot-icon">
-        <a href="Iris.html" target="_blank"> <img src="public/image/IRIS.png" alt="Chatbot"> </a>
-    </div>
+<div class="chatbot-icon">
+    <a href="./Iris.html" target="_blank"> <img src="./public/image/IRIS.png" alt="Chatbot"> </a>
+</div>
 
 <!-- About US -->
 
@@ -101,44 +101,44 @@
 </p>
 
 
-    <footer>
-        <div class="container" id="footer">
-            <div class="footer-content">
-                <h3>Contact Us</h3>
-                <p>Email: starnex@galaxy.com</p>
-                <p>Phone:+91 1234567890</p>
-                <p>Address: 123, Model Town, XYZ Nagar, Rajpura</p>
-            </div>
-            <div class="footer-content">
-                <h3>Quick Links</h3>
-                <ul class="list">
-                    <li><a href="./SignUp.html" target="_blank"></a>Register</li>
-                    <li><a href="discover.html" target="_blank">Discover</a></li>
-                    <li><a href="Iris.html" target="_blank">IrisAI</a></li>
-                    <li><a href="feedback.html" target="_blank">Feedback</a></li>
-                    <li><a href="./https://mail.google.com/mail/u/0/#inbox" target="_blank">Contact</a></li>
-                </ul>
-            </div>
-            <div class="footer-content">
-                <h3>Follow Us</h3>
-                <ul class="social-icons">
-
-                    <li><a href="https://www.facebook.com/" target="_blank"><img src="https://webstockreview.net/images/white-facebook-icon-png-4.png" alt="Facebook" style="height: 20px; width: 20px;"></a></li>
-
-                    <li><a href="https://twitter.com/login" target="_blank"><img src="https://www.pinclipart.com/picdir/big/578-5789236_twitter-clipart.png" alt="x" style="height: 17px; width: 20px;"></a></li>
-
-                    <li><a href="https://www.instagram.com/" target="_blank"><img src="https://www.pngkey.com/png/full/1-19361_watercolor-instagram-icon-png-instagram-logo-white-on.png" alt="instagram" style="height: 17px; width: 17px;"></a></li>
-
-                    <li><a href="https://www.youtube.com/" target="_blank"><img src="https://th.bing.com/th/id/R.3cfbc995df96e1ace93e0d23e5884b3e?rik=7N4nANscprreig&riu=http%3a%2f%2fclipart-library.com%2fimages%2fdc4LABqni.png&ehk=wMo4WyijaHWTJt1nMQKvD06j9%2fjkDwXAO%2btufnjfRwU%3d&risl=&pid=ImgRaw&r=0" alt="yt" style="height: 15px; width: 20px;"></a></li>
-                </ul>
-
-            </div>
+<footer>
+    <div class="container" id="footer">
+        <div class="footer-content">
+            <h3>Contact Us</h3>
+            <p>Email: starnex@galaxy.com</p>
+            <p>Phone:+91 1234567890</p>
+            <p>Address: 123, Model Town, XYZ Nagar, Rajpura</p>
         </div>
-        <div class="bottom-bar">
-            <p>&copy; 2024 STARNEX . All rights reserved</p>
+        <div class="footer-content">
+            <h3>Quick Links</h3>
+            <ul class="list">
+                <li><a href="SignUp.html"></a>Register</li>
+                <li><a href="discover.html">Discover</a></li>
+                <li><a href="Iris.html" target="_blank">IrisAI</a></li>
+                <li><a href="" target="_blank">Feedback</a></li>
+                <li><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">Contact</a></li>
+            </ul>
         </div>
-    </footer>
-    
+        <div class="footer-content">
+            <h3>Follow Us</h3>
+            <ul class="social-icons">
+
+                <li><a href="https://www.facebook.com/" target="_blank"><img src="public/image/facebook-icon-png-4.png" alt="Facebook" style="height: 30px; width: 30px;"></a></li>
+
+                <li><a href="https://twitter.com/login" target="_blank"><img src="public/image/twitter-clipart.png" alt="x" style="height: 30px; width: 30px;"></a></li>
+
+                <li><a href="https://www.instagram.com/" target="_blank"><img src="public/image/instagram-new.png" alt="instagram" style="height: 30px; width: 30px;"></a></li>
+
+                <li><a href="https://www.youtube.com/" target="_blank"><img src="public/image/youtube-app-white-icon.png" alt="yt" style="height: 30px; width: 30px;"></a></li>
+            </ul>
+
+        </div>
+    </div>
+    <div class="bottom-bar">
+        <p>&copy; 2024 StarNex . All rights reserved</p>
+    </div>
+</footer>
+
 
 </body>
 </html>
