discover page css fixed

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Contact Us</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="./public/css/contact.css">
 </head>
 <style>
     @media (max-width: 1200px) {
@@ -18,9 +18,6 @@
             font-size: 1rem;
         }
 
-        .content-form {
-            margin-top: 1.5rem;
-        }
 
         .content-form section {
             margin-bottom: 1.5rem;
@@ -28,18 +25,6 @@
 
         .content-form i {
             font-size: 2rem;
-        }
-
-        .form {
-            margin-left: 1rem;
-        }
-
-        .media {
-            position: relative;
-            bottom: auto;
-            right: auto;
-            justify-content: center;
-            margin-top: 1rem;
         }
 
         .media li {
