discover page css fixed

--- a/SignUp.html
+++ b/SignUp.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="public/image/favicon.ico">
 
 </head>
-<body onload="generateSpans()">
+<body>
 
 
 <section id="spanGenerate">
