--- a/backup/Iris.html
+++ b/backup/Iris.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>Iris</title>
-    <link rel="icon" href="public/image/favicon.ico">
-    <link rel="stylesheet" href="./public/css/Iris.css">
+    <link rel="icon" href="/image/favicon.ico">
+    <link rel="stylesheet" href="/css/Iris.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Google Fonts Link For Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <script src="./public/js/iris.js" defer></script>
+    <script src="/js/iris.js" defer></script>
 </head>
 <body class="show-chatbot">
 
