--- a/backup/contact.html
+++ b/backup/contact.html
@@ -3,83 +3,161 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Us</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Slab&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="my-app/public/css/contact.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>contact us</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/contact.css">
 </head>
-<body >
-    <body style="background-color: rgb(0, 0, 0);">
+<style>
+    @media (max-width: 1200px) {
+        h1 {
+            font-size: 2.5rem;
+        }
 
+        p {
+            font-size: 1rem;
+        }
 
-    <div class="container mt-5" >
-        <header>
-            <h1>Contact Us</h1>
-            <p>We're excited to hear from you! Whether you have feedback about our games, suggestions for new features, or just want to say hello, feel free to reach out. Your input helps us make our website even better!</p>
-        <div class="content">
-            <div class="content-form">
-                <section>
-                    <div class="fa"><i class="fa fa-map-marker fa-2x" aria-hidden="true"></i></div>
-                    <h2>address</h2>
-                    <p>
-                        Lorem ipsum dolor sit. <br>
-                        Lorem, ipsum dolor. <br>
-                        lorem
-                    </p>
-                </section>
+        .content-form section {
+            margin-bottom: 1.5rem;
+        }
 
-                <section>
-                    <i class="fa fa-phone fa-2x" aria-hidden="true"></i>
-                    <h2>Phone</h2>
-                    <p>123-456-78901548</p>
-                </section>
+        .content-form i {
+            font-size: 2rem;
+        }
 
-                <section>
-                    <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
-                    <h2>E-mail</h2>
-                    <p>dghdgqd@temporary.net</p>
-                </section>
-            </div>
+        .media li {
+            margin: 0 0.8rem;
+        }
+
+        .media i {
+            font-size: 1.8rem;
+        }
+    }
+
+    @media (max-width: 800px) {
+        h1 {
+            font-size: 2.2rem;
+        }
+
+        p {
+            font-size: 0.9rem;
+        }
+        .content-form section {
+            margin-bottom: 1rem;
+        }
+
+        .content-form i {
+            font-size: 1.8rem;
+        }
+        .media li {
+            margin: 0 0.5rem;
+        }
+
+        .media i {
+            font-size: 1.5rem;
+        }
+    }
+
+    @media (max-width: 400px) {
+        h1 {
+            font-size: 2rem;
+        }
+
+        p {
+            font-size: 0.8rem;
+        }
+
+        .content-form section {
+            margin-bottom: 0.5rem;
+        }
+
+        .content-form i {
+            font-size: 1.5rem;
+        }
+
+        .media li {
+            margin: 0 0.3rem;
+        }
+
+        .media i {
+            font-size: 1.2rem;
+        }
+    }
+</style>
+<body>
+
+<div class="container mt-5">
+    <header>
+        <h1 style="color: azure;">Contact Us</h1>
+        <p style="color: azure; font-size: larger;">We'd excited to hear from you! Whether you have feedback about our games, suggestions for new features, or just want to say hello, feel free to reach out. Your input helps us make our website even better!</p>
+    </header>
+
+    <div class="content">
+        <div class="content-form">
+            <section>
+                <i id="iconFirst" class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
+                <h2>address</h2>
+                <p>
+                    Lorem ipsum dolor sit. <br>
+                    Lorem, ipsum dolor.
+
+                </p>
+            </section>
+
+            <section>
+                <i class="fa fa-phone fa-2x" aria-hidden="true"></i>
+                <h2>Phone</h2>
+                <p>123-456-78901548</p>
+            </section>
+
+            <section>
+                <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
+                <h2>E-mail</h2>
+                <p class="paraThird">dghdgqd@temporary.net</p>
+            </section>
         </div>
 
+        <form id="contact-form">
+            <div class="form">
+                <div class="right">
+                    <div class="contact-form" style="padding: 1%;">
+                        <span style="color: aliceblue;">Full Name</span>
+                        <input type="text" id="name" name="name" required >
 
-    <form>
-        <div class="form">
-            <div class="right">
-              <div class="contact-form">
-                  <input type="text" required>
-                  <span>Full Name</span>
-              </div>
-  
-              <div class="contact-form">
-                  <input type="E-mail" required>
-                  <span>E-mail Id</span>
-              </div>
-              <div class="contact-form">
-                <input type="text" required>
-                <span> Type your Message....</span>
-              </div>
-  
-              <div class="contact-form">
-                  <input type="submit" name="submit">
-              </div>
-              </div>
+                    </div>
+
+                    <div class="contact-form" style="padding: 1%;">
+                        <span style="color: aliceblue;">E-mail Id</span>
+                        <input type="email" id="email" name="email" required>
+
+                        <span class="error-message"></span>
+                    </div>
+
+                    <div class="contact-form" style="padding: 1%;">
+                        <span style="color: aliceblue;">Type your Message....</span>
+                        <input type="text" id="message" name="message" required>
+
+                    </div>
+
+                    <div class="contact-form" style="padding: 7%;">
+                        <input type="submit" name="submit" value="Submit" style=" border-radius: 10px; border-color: rgb(111, 108, 153);">
+                    </div>
+                </div>
             </div>
-          </div>
-    </form>
+        </form>
+    </div>
 
-
-        <div class="media">
+    <div class="media">
+        <ul>
             <li><i class="fa fa-facebook-square fa-2x" aria-hidden="true"><a href=""></a></i></li>
             <li><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></li>
             <li><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></li>
             <li><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></li>
-        </div>
-       
+        </ul>
     </div>
+</div>
+
+<script src="/js/contact.js"></script>
 </body>
 </html>
