--- a/backup/discover.html
+++ b/backup/discover.html
@@ -15,7 +15,7 @@
         <a href="./homepage.html">Home</a>
         <a href="./discover.html">Games</a>
         <a href="./feedback.html">Feedback</a>
-        <a href="./contact.html">Contact</a>
+        <a href="/games/carrush/html5game/index.html">Contact</a>
 
         <!-- Search Bar -->
         <div class="search-bar">
