\\ Split up pages into pre-auth and post-auth and added argument passing between them, this will allow passing user values in the future update.

--- a/backup/SignIn.html
+++ b/backup/SignIn.html
@@ -20,7 +20,7 @@
       font-size: 8px; /* Smaller text for error messages */
       margin-top: 6px; /* Slight margin to separate it from the input field */
       display: none; /* Hidden by default */
-      position: absolute; /* Absolute positioning to avoid pushing down other elements */
+      position: absolute; /* Absolute positioning to avoid pushing down other common_elements */
       bottom: -18px; /* Positioned just below the input field */
       left: 0;
     }
